[gd_scene load_steps=2 format=2]

[ext_resource path="res://autoloads/PersistenceData.gd" type="Script" id=1]

[node name="PersistenseData" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Player1" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
margin_right = 66.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/Player1"]
margin_top = 2.0
margin_right = 66.0
margin_bottom = 10.0
size_flags_vertical = 0
text = "1-UP "
align = 1

[node name="Score1P" type="Label" parent="CanvasLayer/HBoxContainer/Player1"]
modulate = Color( 1, 0, 0, 1 )
margin_top = 10.0
margin_right = 66.0
margin_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
text = "00000"
align = 1

[node name="HiScore" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
margin_left = 70.0
margin_right = 137.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/HiScore"]
margin_top = 2.0
margin_right = 67.0
margin_bottom = 10.0
size_flags_vertical = 0
text = "HI-SCORE"
align = 1

[node name="HiScore" type="Label" parent="CanvasLayer/HBoxContainer/HiScore"]
modulate = Color( 1, 0, 0, 1 )
margin_top = 10.0
margin_right = 67.0
margin_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
text = "00000"
align = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
margin_left = 141.0
margin_right = 208.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer/VBoxContainer3"]
margin_top = 2.0
margin_right = 67.0
margin_bottom = 10.0
align = 1

[node name="Label2" type="Label" parent="CanvasLayer/HBoxContainer/VBoxContainer3"]
modulate = Color( 1, 0, 0, 1 )
margin_top = 10.0
margin_right = 67.0
margin_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
align = 1
